# Blockchain-Certificate-Verifier

./: .gitignore  README.md  blockchain_certificate_verifier_architecture.md  deep-research-report.md  docker-compose.yml  run.ps1
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/config/: settings.py
backend/app/db/: database.py
backend/app/models/: certificate.py  organization.py  user.py
backend/app/routes/: auth.py  certificates.py  organizations.py
backend/app/schemas/: certificate.py  organization.py  user.py
backend/app/services/: auth_service.py  blockchain_service.py  certificate_service.py  minio_service.py
backend/app/templates/: certificate_template.html
backend/scripts/: check_cert.py  check_dashboard_endpoints.py  check_db_conn.py  deploy.py  init_db_data.py  migrate_db.py  test_api.py  test_crypto.py  test_minio_conn.py
backend/tests/: test_backend_full.py
contracts/: CertificateVerifier.sol
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/ui/: background-paper-shaders.tsx  button.tsx  footer.tsx  image-comparison-demo.tsx  image-comparison.tsx  input.tsx  meteors-demo.tsx  meteors.tsx  modern-animated-hero-section.tsx  particles.tsx
frontend/src/pages/: Dashboard.jsx  LandingPreview.jsx  Login.jsx  Verify.jsx
