[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Tanmoy Debnath",email = "154241417+TanmoyFRu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "reportlab (>=4.4.10,<5.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "cryptography (>=46.0.5,<47.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "web3 (>=7.14.1,<8.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "py-solc-x (>=2.0.5,<3.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "httpx (>=0.28.1,<0.29.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "pytest (>=9.0.2,<10.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "bcrypt (==4.0.1)",
    "minio (>=7.2.20,<8.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
